--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "e2e": "ng e2e"
+    "heroku-postbuild": "ng build"
   },
   "private": true,
   "dependencies": {
@@ -34,5 +33,9 @@
     "@types/node": "^16.11.35",
     "ts-node": "~10.9.0",
     "typescript": "~4.9.3"
+  },
+  "engines": {
+    "node": "18.16.0",
+    "npm": "8.19.4"
   }
 }
