--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "heroku-postbuild": "ng build"
+    "heroku-postbuild": "ng build --configuration prod"
   },
   "private": true,
   "dependencies": {
@@ -28,7 +28,7 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular/cli": "^16.0.0",
+    "@angular/cli": "^16.0.4",
     "@angular/compiler-cli": "^16.0.0",
     "@types/node": "^16.11.35",
     "ts-node": "~10.9.0",
