--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "heroku-postbuild": "ng build --configuration prod"
+    "heroku-postbuild": "ng build"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "^16.0.4",
+    "@angular/compiler-cli": "^16.0.0",
     "@angular-devkit/build-angular": "^16.0.4",
     "@angular/animations": "^16.0.0",
     "@angular/common": "^16.0.0",
@@ -28,8 +30,6 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular/cli": "^16.0.4",
-    "@angular/compiler-cli": "^16.0.0",
     "@types/node": "^16.11.35",
     "ts-node": "~10.9.0",
     "typescript": "~4.9.3"
