--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "heroku-postbuild": "ng build --configuration production"
+    "build-prod": "ng build --configuration production"
   },
   "private": true,
   "dependencies": {
