--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "auth-cloud-webauthn-example",
-  "version": "0.0.0",
-  "description": "Example project from an angular.io guide.",
+  "version": "1.0.0",
+  "description": "Example Implementation of the AuthCloud WebAuthn SDK",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
