wire in tailwind via npm

--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/assets/css/output.css"
             ],
             "scripts": []
           },
