--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.18.34",
+    "tailwindcss": "^3.3.2",
     "ts-node": "~10.9.1",
     "typescript": "~4.9.3"
   }
