--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^15.2.8",
-    "@angular/common": "^15.2.9",
-    "@angular/compiler": "^15.2.9",
-    "@angular/compiler-cli": "^15.2.9",
-    "@angular/core": "^15.2.9",
-    "@angular/forms": "^15.2.9",
-    "@angular/platform-browser": "^15.2.9",
-    "@angular/platform-browser-dynamic": "^15.2.9",
-    "@angular/router": "^15.2.9",
+    "@angular-devkit/build-angular": "^16.0.4",
+    "@angular/animations": "^16.0.0",
+    "@angular/cli": "^16.0.4",
+    "@angular/common": "^16.0.0",
+    "@angular/compiler": "^16.0.0",
+    "@angular/compiler-cli": "^16.0.0",
+    "@angular/core": "^16.0.0",
+    "@angular/forms": "^16.0.0",
+    "@angular/platform-browser": "^16.0.0",
+    "@angular/platform-browser-dynamic": "^16.0.0",
+    "@angular/router": "^16.0.0",
     "@trusona/webauthn": "^0.3.1",
     "rxjs": "~7.8.1",
     "tslib": "^2.5.3",
