--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "build-prod": "ng build --configuration production"
+    "build-prod": "ng build --configuration production",
+    "builder": "bash bin/builder.sh"
   },
   "private": true,
   "dependencies": {
